Integrated new core, feature #10